# RL-Agent-for-Security

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.agent  README.md  WORKFLOW.md  detail.md  docker-compose.yml  inference.py  openenv.yaml  out.txt  pyproject.toml  requirements.txt  requirements2.txt  setup.md  test.md
agent/: Dockerfile
api/: server.py
core/: scoring.py
data/: asset_generator.py  nvd_fetcher.py  threat_intel.py
data/cache/: cves.json  epss_scores.json  kev_cves.json
env/: environment.py  graders.py  models.py  reward.py  security_env.py  state_manager.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: envClient.js
frontend/src/components/assets/: AssetList.jsx
frontend/src/components/cve/: CVECard.jsx  EPSSBar.jsx  KEVBadge.jsx  SeverityBadge.jsx
frontend/src/components/dashboard/: StatCards.jsx
frontend/src/components/results/: RewardDisplay.jsx
frontend/src/hooks/: useEnvironment.js
frontend/src/pages/: DashboardPage.jsx
server/: app.py
tasks/: task1_severity_ranking.py  task2_asset_prioritization.py  task3_full_triage.py
threat_intel/: cve_loader.py  epss.py  kev.py
threat_intel/cache/: cves_dict.json  epss_scores.json  kev_cves.json
